# dataStructAndAlgo

./: .gitignore  CMakeLists.txt  README.md  abstractDataType.c  adtcursorbased.c  aitest.c  binarySearchTree.c  circularQueue.c  cursorbased.c  linkedList.c  stack.c  stackArray.h  stackLink.h  test.c
ADT List/: cursorBasedList.c  linkedList (initialize, insertLast).c  listArrayV1.h  listArrayV2.h  listArrayV3.h  listArrayV4.h  listCursorBased.h  listLinkedList.h  listMain.c
ADT Queue/: circularQueue.c
ADT Stack/: stackLink.h  stackMain.c
Unfinished/: arrayList.c  bitCount.c
